k8s/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  selector:
    matchLabels:
      app: client-deployment
  template:
    metadata:
      labels:
        app: client-deployment
    spec:
      containers:
      - name: client-deployment
        image: savio/frontend
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  type: NodePort
  selector:
    app: client-deployment
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30001
