k8s/mongo-deployment.yml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: mongo-deployment
# spec:
#   selector:
#     matchLabels:
#       app: mongo-deployment
#   template:
#     metadata:
#       labels:
#         app: mongo-deployment
#     spec:
#       containers:
#       - name: mongo-deployment
#         image: mongo:latest
#         resources:
#           limits:
#             memory: "128Mi"
#             cpu: "250m"
#         ports:
#         - containerPort: 27017
# ---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-state
spec:
  selector:
    matchLabels:
      app: mongo-deployment
  serviceName: mongo-deployment
  replicas: 2
  template:
    metadata:
      labels:
        app: mongo-deployment
    spec:
      containers:
      - name: mongo-deployment
        image: mongo:latest
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
        ports:
        - containerPort: 27017
      volumes:
      - name: mongodata
        persistentVolumeClaim:
          claimName: mongodata
  volumeClaimTemplates:
  - metadata:
      name: mongodata
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: mongo-deployment
  ports:
  - port: 27017
    targetPort: 27017
