k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    name: myingress
spec:
  ingressClassName: nginx
  rules:
  - host: mytodo.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: server-service
            port: 
              number: 80
